--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     background: #abebff;
     color: #1b1b1b;
-    overflow: hidden;
+}
+
+a {
+    color: #1b1b1b;
+    text-decoration: none;
 }
 
 ul {
@@ -14,17 +22,17 @@ ul {
 .hero {
     background: url(./images/hero.jpg);
     background-size: cover;
-    height: 40vh;
+    padding: 1.5em;
+    margin: 0 auto;
 }
 
 header {
-    max-width: 80%;
+    padding: 1.5em;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 header .logo {
-    padding-left: 1em;
     width: 50px;
     height: 50px;
 }
@@ -38,11 +46,15 @@ header ul li a {
 }
 
 .hero h1 {
+    text-transform: uppercase;
+    margin: 3em 0 0;
     text-align: center;
 }
 
 .hero p {
+    font-size: larger;
     text-align: center;
+    margin-bottom: 2em;
 }
 
 h2 {
@@ -54,15 +66,27 @@ h2 {
 }
 
 .photos {
-    display: flexbox;
-
-    padding: 2em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+    justify-content: space-around;
 }
-
 .photos img {
-    width: 25rem;
+    width: 480px;
+    padding: 2em;
 }
 
 .info {
     text-align: center;
+}
+
+.btn{
+    display: inline-block;
+    text-decoration: none;
+    padding: .5em 1.25em;
+    background: rgb(45, 179, 11);
+    color: rgb(19, 19, 19);
+    font-weight: bold;
+    font-size: 1.125rem;
+    text-transform: uppercase;
+    border-radius: .25em;
 }
